# nllm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  justfile  styles.css
nllm_chat_functions/: Cargo.toml
nllm_chat_functions/src/: main.rs
nllm_chat_visulizer/: Cargo.toml  index.html
nllm_chat_visulizer/src/: main.rs
nllm_chat_web/: Cargo.toml  admin.html  index.html
nllm_chat_web/public/icons/: site.webmanifest
nllm_chat_web/public/res/: ws.js
nllm_chat_web/public/scripts/: app.js  navigation.js  realtime.js  svg.js  utils.js
nllm_chat_web/src/: chat.rs  inference.rs  logging.rs  main.rs  tower_ext.rs
nllm_chat_web/src/model/: conversation.rs
nllm_embed/: Cargo.toml
nllm_embed/src/: bounded.rs  config.rs  main.rs  messages.rs  model.rs  training.rs
nllm_embed_ctrl/: Cargo.toml  admin.html
nllm_embed_ctrl/src/: lib.rs  main.rs
nllm_engine/: Cargo.toml
nllm_engine/src/components/: chatter.rs  editor.rs
nllm_engine/src/components/trainer/: hook.rs  nearest.rs  parser.rs
nllm_engine/src/ml/: bpe.rs  embeddings.rs  gdt.rs  mod.rs  random.rs
nllm_engine/src/ml/network/: layer.rs
nllm_plane/: Cargo.toml
nllm_plane/src/: lib.rs
nllm_plane/src/ml/: bpe.rs  cell.rs  embeddings.rs  gdt.rs  mod.rs  random.rs  seq2seq.rs
nllm_plane/src/ml/network/: layer.rs  mod.rs  transformer.rs
nllm_respond/: Cargo.toml
nllm_respond/src/: lib.rs  main.rs
nllm_trainer_web/: Cargo.toml
nllm_trainer_web/src/: main.rs
nllm_trainer_web/src/components/: plot.rs  trainer.rs
nllm_trainer_web/src/components/trainer/: handle.rs
nllm_web/: Cargo.toml
nllm_web/src/components/: chatter.rs
nllm_web/src/components/trainer/: hook.rs  nearest.rs  parser.rs
res/: tinyimdb.txt  tinytester.txt
res/scripts/: phrase-list.js  word-set.js
src/: lib.rs  main.rs  tester.rs
src/components/: editor.rs  mod.rs  plot.rs  trainer.rs
src/components/trainer/: handle.rs  hook.rs  nearest.rs  parser.rs
src/ml/: cell.rs  embeddings.rs  gdt.rs  mod.rs  network.rs  random.rs  seq2seq.rs
src/ml/network/: layer.rs  mod.rs  transformer.rs
