[package]
name = "nllm_chat_functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plane = { path = "../nllm_plane", default-features = false, features = ["threadrng"] }
respond = { path = "../nllm_respond", default-features = false, features = ["threadrng"] }
anyhow = { version = "1.0.69", features = ["backtrace"] }
aws-config = "0.55"
aws-sdk-s3 = "0.28"
hyper = { version = "0.14", features = [
    "http1",
    "client",
    "stream",
] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde_json = "1.0"