[package]
name = "nllm_chat_visulizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# plane = { path = "../nllm_plane", default-features = false, features = ["threadrng"]}
# respond = { path = "../nllm_respond", default-features = false, features = ["threadrng"]}
anyhow = { version = "1.0.69", features = ["backtrace"] }
js-sys = "0.3.64"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "MouseEvent"]

[features]
default = []
