[package]
name = "nllm_chat_web"
version = "0.1.0"
edition = "2021"

[dependencies]
plane = { path = "../nllm_plane", default-features = false, features = ["threadrng"]}
respond = { path = "../nllm_respond", default-features = false, features = ["threadrng"]}
anyhow = { version = "1.0.69", features = ["backtrace"] }
axum = { version = "0.6.19", features = ["ws"] }
aws-config = "0.55"
aws-sdk-lambda = "0.28.0"
futures = "0.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
reqwest = { version = "0.11.18", features = ["stream", "json"] }
tokio-util = "0.7.8"

[features]
default = []
s3 = []
