[package]
name = "embed"
version = "0.1.0"
edition = "2021"
default-run = "embed"

# [profile.release]
# debug = true

[[bin]]
name = "upload"
required-features = ["db"]

[dependencies]
plane = { path = "../nllm_plane", default-features = false }
anyhow = { version = "1.0.69", features = ["backtrace"] }
clap = { version = "4.1.13", features = ["derive"] }
crossterm = { version = "0.26.1", optional = true }
itertools = "0.10.5"
mongodb = { version = "2.5.0", default-features = false, features = ["tokio-sync"], optional = true }
plotly = "0.8.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }

[features]
default = ["multi_threaded"]
db = ["mongodb"]
cli = ["plane/cli", "crossterm"]
thread = ["plane/thread"]
wasi = ["plane/wasi"]
single_threaded = ["plane/single_threaded"]
multi_threaded = ["plane/multi_threaded", "thread", "cli"]
short_floats = ["plane/short_floats"]
