[package]
name = "plane"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
itertools = "0.10.5"
js-sys = { version = "0.3.61", optional = true }
plotly = "0.8.3"
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.4.3", optional = true }
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tracing = "0.1.37"

[dev-dependencies]
rand = { version = "0.8.5" }
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }

[features]
default = ["cli", "thread", "threadrng", "threadpool"]
js = ["js-sys"]
cli = []
thread = []
threadpool = ["thread", "rayon"]
threadrng = ["rand", "rand_distr"]
wasi = ["threadrng"]
single_threaded = ["cli", "threadrng"]
multi_threaded = ["cli", "threadrng", "threadpool"]
short_floats = []
