[package]
name = "respond"
version = "0.1.0"
edition = "2021"

[dependencies]
plane = { path = "../nllm_plane", default-features = false, features = ["threadrng"]}
anyhow = { version = "1.0.69", features = ["backtrace"] }
itertools = "0.10.5"
serde_json = "1.0.93"

[features]
threadrng = ["plane/threadrng"]
