[package]
name = "nllm_web"
version = "0.1.0"
edition = "2021"

[dependencies]
plane = { path = "../nllm_plane", default-features = false, features = ["js"] }
anyhow = { version = "1.0.69", features = ["backtrace"] }
itertools = "0.10.5"
js-sys = "0.3.61"
plotly = { version = "0.8.3", features = ["wasm"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
time = { version = "0.3.20", features = ["wasm-bindgen"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time"] }
tracing-web = "0.1.2"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlCanvasElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
yew-hooks = "0.2.0"

[features]
include_res = []
